--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
@@ -3,9 +3,8 @@
 ================= */
 $formElementBorderWidth: 2px;
 $elementBorder: $formElementBorderWidth solid $formElementBorder;
-
 @mixin placeholder{
-	$placeTint: .4;
+	$placeTint: 1;
 	&::-webkit-placeholder{
 		opacity: $placeTint;
 		color: $placeColor;
