--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/02-layout-builder/_layout_builder.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/02-layout-builder/_layout_builder.scss
@@ -30,6 +30,9 @@
 			@include customOptions;
 		}
 	}//end form actions
+	details#edit-xmlsitemap{
+		display: none;
+	}
 	#layout-builder{
 		overflow-x: hidden;
 	}
