--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -63,7 +63,7 @@ $formElementBorderHover   : $borderRule;
 $formElementBorderFocus   : $black;
 $metaBorderSoft           : rgba(35,35,35,0.1);
 $metaBorderHard           : rgba(35,35,35,0.3);
-$placeColor               : $baseText;
+$placeColor               : $contrastGrey;
 $placeFocusColor          : $placeColor;
 $validation               : $red;
 $checkbox                 : $link;
