--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
@@ -66,7 +66,7 @@ body,#drupal-off-canvas{
 			//rendered selection
 			.select2-selection__rendered{
 				padding: 6px 32px 6px 10px;
-				color: $darkGrey;
+				color: $placeColor;
 				text-align: left;
 				background: $siteBack;
 			}
