Fix contrast grey

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -92,7 +92,7 @@ $searchCloseBackHover      : $black;
 $formElementBorder        : $borderRule;
 $formElementBorderHover   : $borderRule;
 $formElementBorderFocus   : $link;
-$placeColor               : $contastGrey;
+$placeColor               : $contrastGrey;
 $placeFocusColor          : $placeColor;
 $validation               : $brightRed;
 $checkbox                 : $link;
