--- a/web/themes/crane/templates/paragraphs/paragraph--block-placer--preview.html.twig
+++ b/web/themes/crane/templates/paragraphs/paragraph--block-placer--preview.html.twig
@@ -39,11 +39,12 @@
 {% extends "paragraph.html.twig" %}
 
 {% block content %}
+	{{ attach_library('crane/confirmation') }}
 	{% set nodeDestination = '?destination=/node/' ~ nodeId ~ '/edit' %}
 	<div class="field field--name-field-block field--label-inline">
 		<div class="field__label">Block</div>
     <div class="field__item">
-			{{- content.field_block.0['#plain_text'] }} | <a class="leave-live" href="/block/{{ content.field_block['#items'].0.target_id ~ nodeDestination }}">Edit block</a> (This block must be edited in the custom block library.)
+			{{- content.field_block.0['#plain_text'] }} | <a class="leave-live confirm-link block-confirm" href="/block/{{ content.field_block['#items'].0.target_id ~ nodeDestination }}">Edit block</a>
 		</div>
 	</div>
 {% endblock %}
