--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/footer/_footer-copyright.twig
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/footer/_footer-copyright.twig
@@ -1,10 +1,16 @@
 {#
- Drupal: This file is embedded in the site-footer.twig pattern lab file and in the footer-copyright Drupal block. The variables are placeholders for those files.
+ Drupal: This file is extended in the site-footer.twig pattern lab file and in the footer-copyright Drupal block.
 #}
 
 {% extends '@molecules/blocks/block.twig' %}
+
 {% block blockContent %}
-	<div class="field body">
-		<p>{{ copyright }}</p>
+	{% set text = {
+		'#type': 'processed_text',
+		'#text': content.body.0['#text'],
+		'#format': content.body.0['#format']
+	} %}
+	<div class="field body copyright">
+		<span class="copyright-year">©{{ "now"|date('Y') -}}</span> {{- text -}}
 	</div>
 {% endblock %}
