--- a/web/themes/citizen_patterns/templates/zzz-custom/blocks/block--1.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/blocks/block--1.html.twig
@@ -25,13 +25,8 @@
  * @see template_preprocess_block()
  */
 #}
-{% embed '@molecules/blocks/footer/_footer-newsletter.twig' 
-	with{
-		modalScripts: attach_library('citizen_patterns/modal')
-	}
-%}
-	{% block dLabel %}
-		{{ label }}
-	{% endblock %}
+{% extends '@molecules/blocks/footer/_footer-copyright.twig' %}
 
-{% endembed %}
+{% block dLabel %}
+	{{ label }}
+{% endblock %}
